Fixed some minor spacing issues with the multi brand item list and moved the description above the multi brand item list.

--- a/src/App.css
+++ b/src/App.css
@@ -274,6 +274,10 @@
     margin-top: calc(var(--spacing) * 10);
   }
 
+  .mb-2.5 {
+    margin-bottom: calc(var(--spacing) * 2.5);
+  }
+
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
   }
@@ -761,4 +765,8 @@
       --tw-drop-shadow-size: initial;
     }
   }
+}
+
+.desc-spacing {
+  margin-bottom: 0.50rem;
 }
